<resources>
    <string name="app_name">VetNetwork</string>
    <string name="browse">Browse</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="university">University</string>
    <string name="bva_number">BVA Number</string>
    <string name="posting_area">Posting Area</string>
    <string name="designation">Designation</string>
    <string name="bvc_registration_number">BVC Registration Number</string>
    <string name="district">District :</string>
    <string name="division">Division :</string>
    <string name="bva_member">BVA Member :</string>
    <string name="bva_designation">BVA Designation :</string>

    <string-array name="bva_designation">
        <item>Select</item>
        <item>President</item>
        <item>Sr. Vice President</item>
        <item>Vice President</item>
        <item>Secretary General</item>
        <item>Joint Secretary</item>
        <item>Treasurer</item>
        <item>Organizing Secretary</item>
        <item>Office Secretary</item>
        <item>Press and Publication Secretary</item>
        <item>International Affairs Secretary</item>
        <item>Sports and Cultural Secretary</item>
        <item>Social Welfare Secretary</item>
        <item>Member</item>
    </string-array>

    <string-array name="posting_area">
        <item>Select</item>
    </string-array>

    <string-array name="division">
        <item>Select</item>
        <item>Barishal</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Mymensingh</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
    </string-array>

    <string-array name="district">
        <item>Select</item>
        <item>Bagerhat</item>
        <item>Bandarban</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Bogra</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chapainababganj</item>
        <item>Chittagong</item>
        <item>Chuadanga</item>
        <item>Comilla</item>
        <item>Coxs Bazar</item>
        <item>Dhaka</item>
        <item>Dinajpur</item>
        <item>Faridpur</item>
        <item>Feni</item>
        <item>Gaibandha</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Habiganj</item>
        <item>Jamalpur</item>
        <item>Jessore</item>
        <item>Jhalokati</item>
        <item>Jhenaidah</item>
        <item>Joypurhat</item>
        <item>Khagrachhari</item>
        <item>Khulna</item>
        <item>Kishoregonj</item>
        <item>Kurigram</item>
        <item>Kushtia</item>
        <item>Lakshmipur</item>
        <item>Lalmonirhat</item>
        <item>Madaripur</item>
        <item>Magura</item>
        <item>Manikganj</item>
        <item>Maulvibazar</item>
        <item>Meherpur</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Naogaon</item>
        <item>Narail</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Natore</item>
        <item>Netrakona</item>
        <item>Nilphamari</item>
        <item>Noakhali</item>
        <item>Pabna</item>
        <item>Panchagarh</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Rajbari</item>
        <item>Rajshahi</item>
        <item>Rangamati</item>
        <item>Rangpur</item>
        <item>Satkhira</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Sirajganj</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Tangail</item>
        <item>Thakurgaon</item>
    </string-array>

    <string-array name="userType">
        <item>Select</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>

    <!--<string-array name="bva">
        <item>No</item>
        <item>Yes</item>
    </string-array>-->

    <string-array name="university">
        <item>Select</item>

        <item>Bangabandhu Sheikh Mujibur Rahman Agricultural University</item>
        <item>Bangabandhu Sheikh Mujibur Rahman Science and Technology University</item>
        <item>Chattogram Veterinary and Animal Sciences University</item>
        <item>Bangladesh Agricultural University</item>
        <item>Gono University</item>
        <item>Hajee Mohammad Danesh Science and Technology University</item>
        <item>Jhenidah Government Veterinary College</item>
        <item>Khulna Agricultural University</item>
        <item>Patuakhali Science and Technology University</item>
        <item>Rajshahi University</item>
        <item>Sher-e-Bangla Agricultural University</item>
        <item>Sirajganj Government Veterinary College</item>
        <item>Sylhet Agricultural University</item>
    </string-array>


    <string name="title_activity_navtest">NavtestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_profile">NavProfileActivity</string>
    <string name="title_activity_profile_setting">ProfileSettingActivity</string>
    <string name="title_activity_test_fucking_nav">TestFuckingNavActivity</string>
    <string name="title_activity_admin_profile">AdminProfileActivity</string>
    <string name="title_activity_admin_control_panel">AdminControlPanelActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_delete_account">DeleteAccountActivity</string>
    <string name="title_activity_delete_account_user">DeleteAccountUserActivity</string>
    <string name="title_activity_edit_profile_admin">EditProfileAdminActivity</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="title_activity_report_for_browsers">ReportForBrowsersActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_report_for_users">ReportForUsersActivity</string>
    <string name="title_activity_report_for_admin">ReportForAdminActivity</string>
    <string name="title_activity_bva">BVAActivity</string>
    <string name="title_activity_edit_bva">EditBVAActivity</string>
    <string name="title_activity_add_bva">AddBVAActivity</string>
</resources>
