<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditProfileActivity">

    <include
        layout="@layout/app_toolbar_layout"
        android:id="@+id/setting_page_toolbar"></include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_page_toolbar"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editProfile_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/regTextColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editProfile_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/regTextColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editProfile_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/phone"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/regTextColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editProfile_bvc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/bvc_registration_number"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/regTextColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editProfile_university_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:editable="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="University"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editProfile_university_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:entries="@array/university" />

        </LinearLayout>

        <EditText
            android:id="@+id/editProfile_postingArea"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/posting_area"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/regTextColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editProfile_district_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:editable="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/district"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editProfile_district_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:entries="@array/district" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editProfile_division_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:editable="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/division"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editProfile_division_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:entries="@array/division" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editProfile_bvaMember_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:editable="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/bva_member"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editProfile_bva_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:entries="@array/bva" />

        </LinearLayout>

        <EditText
            android:id="@+id/editProfile_bva_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/bva_number"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/regTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/editProfile_linearLayout_bvaDesignation">

            <EditText
                android:id="@+id/editProfile_bvaDesignation_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:editable="false"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/bva_designation"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/editProfile_bvaDesignation_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:entries="@array/bva_designation" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/editProfile_changeButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_logout"
        android:text="Change"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"/>

</RelativeLayout>